% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-23 [2025-10-24]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{pkgDesc()} gets a new option \code{onlyLT = <num>} which
      by default skips longish \code{Author} and \code{Description} fields.

      \item \code{n.plot()} gets new arguments \code{type} and \code{pt.col}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{eaxis()} is now "protected" against large
      \code{options("digits")} which may give badly formatted tick "labels".
    }
  }
}
\section{CHANGES in sfsmisc VERSION 1.1-22 [2025-08-30]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{pretty10exp()} and hence \code{eaxis()} get new behaviour
      for non-default \code{sub10 = nn}; notably, \code{nn} may now be a
      negative integer; \code{sub10 = "10"} is now equivalent to
      \code{sub10 = c(-1,1)}, and newly, \code{sub10 = "100"} and
      \code{"1000"} as "mnemonic" for \code{sub10 = c(-1, 2)} or
      \code{c(-2, 3)}, respectively.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-21 [2025-07-25]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New \code{GCD(m,n)} and \code{LCM(...)}
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-20 [2024-10-23]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{sessionInfoX()} now reports \code{R_compiled_by()} when
      that exists.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-19 [2024-08-16]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item pretty10exp() gets new offset arg \code{off} and now works
      correctly even for subnormal numbers.
    }
  }
  \subsection{Misc}{
    \itemize{